Make sure scrollbar stays even if not necessary to avoid layout shift

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,3 +4,7 @@ html, body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
 'Helvetica Neue', Arial, sans-serif;
 }
+
+body {
+  overflow-y: scroll;
+}
